--- a/css/footer.css
+++ b/css/footer.css
@@ -1,6 +1,6 @@
 .trademark{
 	width: 100%;
-	height: 70px;
+	height: 100px;
 	background-color: #efefef;
 	/* background-color: #929292; */
 }
@@ -8,7 +8,7 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	padding: 10px 0 0 0;
+	padding: 10px 0 5px 0;
 }
 .trademark>p>span{
 	margin:0 10px;
@@ -18,4 +18,10 @@
 }
 .trademark>p>span a:hover{
 	color: rgb(0, 0, 200);
+}
+
+.footer-hr{
+	height: 3px;
+	width: 100%;
+	background-color: aqua;
 }
