--- a/css/footer.css
+++ b/css/footer.css
@@ -8,7 +8,7 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	padding: 10px 0 5px 0;
+	padding: 10px 0 0 0;
 }
 .trademark>p>span{
 	margin:0 10px;
