noto Sans 字体 江西拙楷2.0 字体

--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@
 	margin: 0;padding: 0;
 }
 body{
-	font-family: 'Micrsoft YaHei UI',tahoma,sans-serif;
+	font-family: 'Noto Sans',"microsoft yahei", sans-serif;
 }
 nav{
 	height: 50px;
