--- a/css/footer.css
+++ b/css/footer.css
@@ -1,3 +1,8 @@
+@font-face {
+	font-family: '江西拙楷2.0';
+	src: url('../asset/fonts/江西拙楷2.0.ttf');
+}
+
 .trademark{
 	width: 100%;
 	height: 100px;
@@ -11,9 +16,11 @@
 	padding: 10px 0 0 0;
 }
 .trademark>p>span{
+	font-family: "江西拙楷2.0",sans-serif;
 	margin:0 10px;
 }
 .trademark>p>span a{
+	font-family: "江西拙楷2.0",sans-serif;
     color: darkcyan;
 }
 .trademark>p>span a:hover{
