--- a/css/footer.css
+++ b/css/footer.css
@@ -1,7 +1,7 @@
-@font-face {
+/* @font-face {
 	font-family: '江西拙楷2.0';
 	src: url('../asset/fonts/江西拙楷2.0.ttf');
-}
+} */
 
 .trademark{
 	width: 100%;
@@ -16,11 +16,11 @@
 	padding: 10px 0 0 0;
 }
 .trademark>p>span{
-	font-family: "江西拙楷2.0",sans-serif;
+	/* font-family: "江西拙楷2.0",sans-serif; */
 	margin:0 10px;
 }
 .trademark>p>span a{
-	font-family: "江西拙楷2.0",sans-serif;
+	/* font-family: "江西拙楷2.0",sans-serif; */
     color: darkcyan;
 }
 .trademark>p>span a:hover{
