--- a/css/color.css
+++ b/css/color.css
@@ -7,7 +7,7 @@
 	/* #FFBE22 -> #272637-#201D2C */
 	/* #00EFFF -> #1E1D2C */
 	/* #FF546C -> #2F3043 */
-	background-color: #252837;
+	background-color: #201D2C;
 }
 .color-black-2{
 	background-color: #333;
