--- a/index.css
+++ b/index.css
@@ -4,6 +4,21 @@
 body{
 	font-family: 'Noto Sans',"microsoft yahei", sans-serif;
 }
+/* 右侧滚动条 */
+::-webkit-scrollbar{
+	width: 6px;
+	height: 300px;
+}
+::-webkit-scrollbar-thumb{
+	/* background: linear-gradient(rgb(17, 157, 212),rgb(17, 212, 105));*/
+	background: linear-gradient(#08CD7C,#5747F7,#FFBE22,#00EFFF,#FF546C);
+	border-radius: 5px;
+	transition: 0.4s;
+}
+::-webkit-scrollbar-thumb:hover{
+	background: linear-gradient(#FF546C,#00EFFF,#FFBE22,#5747F7,#08CD7C);     
+}
+
 nav{
 	height: 50px;
 	width: 100%;
@@ -26,6 +41,13 @@ nav{
 .nav-box h1:hover{
 	cursor: pointer;
 }
+
+h2{
+	color: #08CD7C;
+	text-align: center;
+	margin: 10px 0 50px 0;
+}
+
 .box{
 	display: flex;
 	flex-direction: row;
@@ -36,10 +58,11 @@ nav{
 	margin-bottom: 80px;
 }
 
-.linked div{
-	margin: 0 5px;
+/* <hr /> */
+.hr-top{
+	transform: translateY(-20px);
+	border: 2px solid #555555;
 }
-.linked div a:hover{
-	color: #a3c455;
+.hr-bottom{
+	border: 1px solid #607070;
 }
-
