--- a/index.css
+++ b/index.css
@@ -5,19 +5,18 @@ body{
 	font-family: 'Noto Sans',"microsoft yahei", sans-serif;
 }
 /* 右侧滚动条 */
-::-webkit-scrollbar{
+/* ::-webkit-scrollbar{
 	width: 6px;
 	height: 300px;
 }
 ::-webkit-scrollbar-thumb{
-	/* background: linear-gradient(rgb(17, 157, 212),rgb(17, 212, 105));*/
 	background: linear-gradient(#08CD7C,#5747F7,#FFBE22,#00EFFF,#FF546C);
-	border-radius: 5px;
-	transition: 0.4s;
+	border-radius: 3px;
+	transition: 2s;
 }
 ::-webkit-scrollbar-thumb:hover{
 	background: linear-gradient(#FF546C,#00EFFF,#FFBE22,#5747F7,#08CD7C);     
-}
+} */
 
 nav{
 	height: 50px;
@@ -37,8 +36,6 @@ nav{
 	display: inline-block;
 	line-height: 50px;
 	padding-left: 20px;
-}
-.nav-box h1:hover{
 	cursor: pointer;
 }
 
@@ -51,8 +48,14 @@ h2{
 .box{
 	display: flex;
 	flex-direction: row;
+	flex-direction: row;
 	justify-content: center;align-items: center;
 	margin-bottom: 50px;
+}
+@media screen and (max-width: 800px) {
+	.box{
+		flex-direction: column;
+	}
 }
 .bottom-box{
 	margin-bottom: 80px;
