--- a/index.css
+++ b/index.css
@@ -52,15 +52,21 @@ h2{
 	justify-content: center;align-items: center;
 	margin-bottom: 50px;
 }
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 400px){
 	.box{
 		flex-direction: column;
 	}
-	.statisticsData .box>div{
-		width: 400px;
-		height: 400px;
+	.box div{
+		width: 300px;
+		height: 300px;
 	}
 }
+@media screen and (min-width: 401px) and (max-width: 1200px) {
+	.box{
+		flex-direction: column;
+	}
+}
+
 .bottom-box{
 	margin-bottom: 80px;
 }
