--- a/index.css
+++ b/index.css
@@ -2,21 +2,9 @@
 	margin: 0;padding: 0;
 }
 body{
-	font-family: 'Noto Sans',"microsoft yahei", sans-serif;
+	font-family: 'Noto Sans' ,serif;
 }
-/* 右侧滚动条 */
-/* ::-webkit-scrollbar{
-	width: 6px;
-	height: 300px;
-}
-::-webkit-scrollbar-thumb{
-	background: linear-gradient(#08CD7C,#5747F7,#FFBE22,#00EFFF,#FF546C);
-	border-radius: 3px;
-	transition: 2s;
-}
-::-webkit-scrollbar-thumb:hover{
-	background: linear-gradient(#FF546C,#00EFFF,#FFBE22,#5747F7,#08CD7C);     
-} */
+
 nav{
 	height: 50px;
 	width: 100%;
@@ -27,7 +15,7 @@ nav{
 	height: 50px;
 	width: 100%;
 	position: fixed;
-	backdrop-filter: brightness(100%) saturate(100%) blur(15px);
+	backdrop-filter: brightness(100%) saturate(100%) blur(15px);;
 	z-index: 1000;
 }
 .nav-box h1{
@@ -74,6 +62,21 @@ h2{
 @media screen and (min-width: 501px) and (max-width: 1200px) {
 	.box{
 		flex-direction: column;
+	}
+}
+@media screen and (min-width: 1201px) {
+	/* 右侧滚动条 */
+	::-webkit-scrollbar{
+		width: 6px;
+		height: 300px;
+	}
+	::-webkit-scrollbar-thumb{
+		background: linear-gradient(#08CD7C,#5747F7,#FFBE22,#00EFFF);
+		border-radius: 3px;
+		transition: 2s;
+	}
+	::-webkit-scrollbar-thumb:hover{
+		background: linear-gradient(#00EFFF,#FFBE22,#5747F7,#08CD7C);     
 	}
 }
 
