--- a/index.css
+++ b/index.css
@@ -1,8 +1,15 @@
 *{
 	margin: 0;padding: 0;
 }
+
+@font-face {
+	font-family: 'Source Han Sans SC VF';
+	src: url('./asset/font/SourceHanSansSC-VF.otf');
+}
+
 body{
-	font-family: 'Noto Sans' ,serif;
+	/* font-family: 'Noto Sans' ,serif; */
+	font-family: 'Source Han Sans SC VF','Noto Sans', serif;
 }
 
 nav{
@@ -35,8 +42,8 @@ h2{
 .box{
 	display: flex;
 	flex-direction: row;
-	flex-direction: row;
-	justify-content: center;align-items: center;
+	justify-content: space-around;
+	align-items: center;
 	margin-bottom: 50px;
 }
 @media screen and (max-width: 300px){
