--- a/css/clock.css
+++ b/css/clock.css
@@ -1,8 +1,61 @@
+.clock-box span{
+    /* z-index: 35; */
+}
+
+.clock-box .lk1 {
+    position: absolute;
+    left: -20px;
+    top: -20px;
+    height: 340px;
+    width: 340px;
+    border: 2px solid #555;
+    border-radius: 34% 64% 62% 35%/ 42% 45% 53% 57%;
+    transition: 0.4s;
+    animation: circle-all 6s linear infinite;
+}
+.clock-box .lk2 {
+    position: absolute;
+    left: -20px;
+    top: -20px;
+    height: 340px;
+    width: 340px;
+    border: 2px solid #555;
+    border-radius: 34% 64% 62% 35%/ 42% 45% 53% 57%;
+    transition: 0.4s;
+    animation: circle-all 8s linear infinite;
+}
+.clock-box .lk3 {
+    position: absolute;
+    left: -20px;
+    top: -20px;
+    height: 340px;
+    width: 340px;
+    border: 2px solid #555;
+    border-radius: 34% 64% 62% 35%/ 42% 45% 53% 57%;
+    transition: 0.4s;
+    animation: circle-all 10s linear infinite;
+}
+.clock-box:hover{
+    background-color: #666;
+}
+@keyframes circle-all{
+    0%{
+        transform: rotate(0deg);
+    }
+    50%{
+        transform: rotate(180deg);
+    }
+    100%{
+        transform: rotate(360deg);
+    }
+}
+
 .clock-box {
     height: 300px;
+    cursor: pointer;
     width: 300px;
     border-radius: 50%;
-    background-color: #555;
+    background-color: #777;
     backdrop-filter: blur(20px);
     border: 1px solid rgba(255, 255, 255, .5);
     z-index: 10;
@@ -34,7 +87,7 @@
     height: 16px;
     border-radius: 50%;
     position:absolute;
-    z-index: 1000;
+    z-index: 100;
 }
 .hour, .minute, .second{
     position: absolute;
