更换主题颜色

--- a/css/color.css
+++ b/css/color.css
@@ -8,7 +8,9 @@
 	/* #FFBE22 -> #272637-#201D2C */
 	/* #00EFFF -> #1E1D2C */
 	/* #FF546C -> #2F3043 */
-	background-color: #201D2C;
+	/* #252526 */
+	/* #161b22 -> #0D1117 */
+	background-color: #0D1117;
 }
 
 .color-black-2 {
