--- a/css/index.css
+++ b/css/index.css
@@ -8,6 +8,7 @@ nav{
     height: 50px;
     width: 100%;
     background-color: white;
+    /* background-color: blue; */
     display: flex;align-items: center;justify-content: space-around;
     box-shadow: 10px 0 10px rgba(255,255,255,0.4);
 }
@@ -36,7 +37,7 @@ nav div>a{
 } */
 .main-box .index{
     /* display: flex;align-items: center;justify-content: center; */
-    position: absolute;bottom: 100px;left: 45%;
+    position: absolute;bottom: 60px;left: 45%;
 }
 /* button */
 .btn{
