--- a/css/color.css
+++ b/css/color.css
@@ -1,3 +1,4 @@
+
 .color-white {
 	background-color: white;
 }
@@ -10,7 +11,7 @@
 	/* #FF546C -> #2F3043 */
 	/* #252526 */
 	/* #161b22 -> #0D1117 */
-	background-color: #0D1117;
+	background-color: #0d1117;
 }
 
 .color-black-2 {
@@ -27,7 +28,7 @@
 }
 
 .color-wl {
-	color: #08CD7C;
+	color: #08cd7c;
 }
 
 .color-lg {
